# joe

./: .gitignore  CHANGELOG.md  JOE.md  README.md  install.sh
examples/: ghostloop-uses-joe.py  joe-profile.example.toml  mcp-clients.ghostloop.json  repos.txt.example
joe-tauri/: .gitignore  README.md  desktop.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
joe-tauri/src-tauri/: Cargo.toml  tauri.conf.json
joe-tauri/src-tauri/capabilities/: default.json
joe-tauri/src-tauri/src/: main.rs  permissions.rs
joe-tauri/src-tauri/src/commands/: agent.rs  fs.rs  git.rs  mod.rs  perms.rs  shell.rs
joe-vscode/: README.md  package-lock.json  package.json  tsconfig.json
tests/: README.md  conftest.py  test_active_repos.py  test_ai_markers_and_skill_install.py  test_atmentions_and_sandbox.py  test_blob_storage.py  test_browser_tool.py  test_catchall_grep.py  test_cd_and_aliases.py  test_custom_commands_and_hooks.py  test_lessons_and_provenance.py  test_lora_endpoint.py  test_lora_prep.py  test_macros.py  test_misc.py  test_orient.py  test_os_sandbox.py  test_parallel_and_cache.py  test_parity_pack.py  test_passport.py  test_pc_control.py  test_plugins_and_project_context.py  test_python_syntax_guard.py  test_reasoning_trace.py  test_repo_map_and_modes.py  test_scope_discipline.py  test_secrets_guardrail.py  test_session_trust.py  test_skill_ledger.py  test_skill_synth.py  test_skill_training.py  test_skills.py  test_subagents.py  test_time_phrase.py  test_tool_diagnose.py  test_tool_protocol.py  test_treesitter_guard.py  test_v0_11_11_features.py
(+15 files in other folders)
