[package]
name = "joe-tauri"
version = "0.1.0"
description = "Menu-bar shell for the joe agent dashboard"
authors = ["Joe Munene"]
license = "MIT"
repository = "https://github.com/joemunene-by/joe"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
