[package]
name = "joe-tauri"
version = "0.3.0"
description = "Desktop app for the joe agent — file / git / shell access with explicit permissions"
authors = ["Joe Munene"]
license = "MIT"
repository = "https://github.com/joemunene-by/joe"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime + subprocess for the joe sidecar.
tokio = { version = "1", features = ["full"] }
# Path utilities (XDG / Library on each platform).
directories = "5"
# Walk filtered file trees for the FileTree pane.
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
